--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Webpack Starter Kit</title>
-  </head>
-
-  <body>
-    <article class="intro">
-      <h1>Webpack starter kit</h1>
-      <h1>Webpack starter kit</h1>
-      <img class="picture" src="../images/bg-pattern.png" alt="pattern" width="500" height="300">
-    </article>
-  </body>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Title</title>
+</head>
+<body>
+    <h1>Hello</h1>
+    <img src="images/photo.jpg" alt="">
+    <div class="container"></div>
+</body>
 </html>
