--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Hello</h1>
-    <img src="images/photo.jpg" alt="">
-    <div class="container"></div>
+  <div class="container">
+    <h1 class="title">Webpack Simple Template</h1>
+    <img  class="img" src="images/photo.jpg" alt="girl">
+  </div>
 </body>
 </html>
