--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Title</title>
-</head>
-<body>
-  <div class="container">
-    <h1 class="title">Webpack Simple Template</h1>
-    <img  class="img" src="images/photo.jpg" alt="girl">
-  </div>
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="title">Webpack Simple Template</h1>
+      <img class="img" src="images/photo.jpg" alt="girl" />
+    </div>
+    <div class="container">
+      <h1 class="title">Webpack Simple Template</h1>
+      <img class="img" src="images/photo.jpg" alt="girl" />
+    </div>
+    <div class="container">
+      <h1 class="title">Webpack Simple Template</h1>
+      <img class="img" src="images/photo.jpg" alt="girl" />
+    </div>
+  </body>
 </html>
