--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,9 @@
       <h1 class="title">Webpack Simple Template</h1>
       <img class="img" src="images/photo.jpg" alt="girl" />
     </div>
+    <div class="container">
+      <h1 class="title">Webpack Simple Template</h1>
+      <img class="img" src="images/photo.jpg" alt="girl" />
+    </div>
   </body>
 </html>
